MP-647 :recycle: Refactor: 테스트 커버리지 개선 및
- 테스트 유틸리티 클래스 간 상속 관계 재정립
ㄴ 각각의 테스트 유틸리티 클래스를 구현하는 테스트 클래스의 의존관계 단순화
- 테스트 전용 영속성 상수 네이밍 재정립
ㄴ 이미 너무 긴 회원 관련 상수를 제외하면 앞에 TEST_ 접두사를 붙이는 것으로 통일
- 엔터티에서 연관관계가 있는 엔터티 필드 이름 통일
ㄴ 필드명에서 Entity 접미사를 일괄 제거
- CommPostEntity의 @PreUpdate 제거
- 엔터티에서 누락되어 있던 equals 및 hashCode 메서드 추가
- 엔터티에서 사용되지 않던 update 메서드 모두 제거
- DataResponse에서 사용되지 않던 of 메서드 제거
- 존재하지 않던 테스트 유틸리티 클래스 추가
- 더 이상 필요하지 않은 상수 제거
- 기타 오타 수정 등 다수의 수정